crates/fdemon-tui/src/render/snapshots/fdemon_tui__render__tests__normal_initializing.snap
---
source: crates/fdemon-tui/src/render/tests.rs
assertion_line: 36
expression: content
---
╭──────────────────────────────────────────────────────────────────────────────╮
│  Flutter Demon v0.3.0 / flutter_app                                         │
╰──────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│                                 Not Connected                                │
│                                                                              │
│                        Press + to start a new session                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
