crates/fdemon-tui/src/render/snapshots/fdemon_tui__render__tests__normal_running.snap
---
source: crates/fdemon-tui/src/render/tests.rs
expression: content
---
╭──────────────────────────────────────────────────────────────────────────────╮
│  Flutter Demon vX.Y.Z / flutter_app                                         │
╰──────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│                                 Not Connected                                │
│                                                                              │
│                        Press + to start a new session                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
