crates/fdemon-tui/src/render/snapshots/fdemon_tui__render__tests__normal_stopped.snap
---
source: crates/fdemon-tui/src/render/tests.rs
expression: content
---
╭──────────────────────────────────────────────────────────────────────────────╮
│  Flutter Demon v0.4.2 / flutter_app                                         │
╰──────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│                                 Not Connected                                │
│                                                                              │
│                        Press + to start a new session                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
